--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,99 +3,181 @@
 
 <head>
     <%- include('partials/header') %>
+        <script>
+            function obtenerId() {
+                '<% var id %>'
+                var id = document.getElementById('id').value;
+                alert(id)
+                '<% var id %>' = id;
+                //alert('<%id%>')
+            }
+        </script>
 </head>
 
 <body>
 
-    <div class="container p-4">
-        <div class="row">
-            <% books.forEach(function(book){ %>
-                <div class="col-md-4">
-                    <div class="card">
-                        <div class="card-header">
-                            <%= book.id %> / <%= book.nombre %>
-                        </div>
+    <form class="form-inline" style="margin-left: 23%; margin-top: 20px;">
+        <div class="form-group mb-2">
+            <label for="staticEmail2" class="sr-only">Email</label>
+            <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Ingrese id: ">
+        </div>
+        <div class="form-group mx-sm-3 mb-2">
+            <label for="inputPassword2" class="sr-only">Id</label>
+            <input type="text" class="form-control" id="id" placeholder="Id">
+        </div>
+        <button type="button" class="btn btn-primary mb-2" onclick="obtenerId()">Buscar</button>
+    </form>
 
-                        <div class="card-body">
-                            <p> Direccion:
-                                <%= book.direccion %>
-                            </p>
+    <% books.forEach(function(book){ %>
+        <% if(book.id==id){ %>
+            <div class="container p-4">
+                <p style="margin: 10px;">
+                    Resultados de la busqueda:
+                </p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-header">
+                                <%= book.id %> / <%= book.nombre %>
+                            </div>
+                            <div class="card-body">
+                                <p> Direccion:
+                                    <%= book.direccion %>
+                                </p>
+                                <p> Edad:
+                                    <%= book.edad %>
+                                </p>
+                                <p> Telefono:
+                                    <%= book.telefono %>
+                                </p>
+                                <p> Sexo:
+                                    <%= book.sexo %>
+                                </p>
+                                <p>
+                                    <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample"
+                                        role="button" aria-expanded="false"
+                                        aria-controls="multiCollapseExample">Detalles Cuenta</a>
+                                </p>
+                                <div class="row">
+                                    <div class="col">
+                                        <div class="collapse multi-collapse" id="multiCollapseExample">
+                                            <div class="card card-body">
+                                                <p> Numero Tarjeta:
+                                                    <%= book.cuentabanco.numerotarjeta %>
+                                                </p>
 
-                            <p>  Edad:
-                                <%= book.edad %>
-                            </p>
+                                                <p> Fecha Vencimiento:
+                                                    <%= book.cuentabanco.fechavencimiento %>
+                                                </p>
 
-                            <p> Telefono:
-                                <%= book.telefono %>
-                            </p>
 
-                            <p> Sexo:
-                                <%= book.sexo %>
-                            </p>
+                                                <p> Saldo disponible:
+                                                    <%= book.cuentabanco.lineacredito.saldodisponible %>
+                                                </p>
 
-                            <div class="accordion" id="accordionExample">
-                                <div class="accordion-item">
-                                  <h2 class="accordion-header" id="headingOne">
-                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                      DETALLES CUENTA
-                                    </button>
-                                  </h2>
-                                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" >
-                                    <div class="accordion-body">
+                                                <p>Saldo por pagar:
+                                                    <%= book.cuentabanco.lineacredito.saldoporpagar %>
+                                                </p>
 
-                                        <p> Numero Tarjeta:
-                                            <%= book.cuentabanco.numerotarjeta %>
-                                        </p>
-            
-                                        <p> Fecha Vencimiento:
-                                            <%= book.cuentabanco.fechavencimiento %>
-                                        </p>
-            
-            
-                                        <p> Saldo disponible:
-                                            <%= book.cuentabanco.lineacredito.saldodisponible %>
-                                        </p>
-            
-                                        <p>Saldo por pagar:
-                                            <%= book.cuentabanco.lineacredito.saldoporpagar %>
-                                        </p>
-            
-                                        <p> Tipo de tarjeta:
-                                            <%= book.cuentabanco.tipotarjeta %>
-                                        </p>
-            
-                                        <p> Tipo de producto:
-                                            <%= book.cuentabanco.tipoproducto %>
-                                        </p>
-             
-                                      
+                                                <p> Tipo de tarjeta:
+                                                    <%= book.cuentabanco.tipotarjeta %>
+                                                </p>
+
+                                                <p> Tipo de producto:
+                                                    <%= book.cuentabanco.tipoproducto %>
+                                                </p>
+                                            </div>
+                                        </div>
                                     </div>
-                                  </div>
                                 </div>
-                              </div>
-
-                            
-
+                            </div>
                         </div>
-                    
-
                     </div>
                 </div>
+            </div>
+            <% } %>
                 <% }); %>
+                    <div class="container p-4">
+                        <p style="margin: 10px;">
+                            Clientes: <% var cont2=0; %>
+                                <% books.forEach(function(book){ cont2++ });%>
+                                    <%= cont2 %>
+                        </p>
+                        <div class="row">
+                            <% var cont=0 %>
+                                <% books.forEach(function(book){ %>
+                                    <div class="col-md-4" style="margin-top: 20px;">
+                                        <div class="card">
+                                            <div class="card-header">
+                                                <%= book.id %> / <%= book.nombre %>
+                                            </div>
+                                            <div class="card-body">
+                                                <p> Direccion:
+                                                    <%= book.direccion %>
+                                                </p>
+                                                <p> Edad:
+                                                    <%= book.edad %>
+                                                </p>
+                                                <p> Telefono:
+                                                    <%= book.telefono %>
+                                                </p>
+                                                <p> Sexo:
+                                                    <%= book.sexo %>
+                                                </p>
+                                                <p>
+                                                    <a class="btn btn-primary" data-toggle="collapse"
+                                                        href="#multiCollapseExample<%= cont %>" role="button"
+                                                        aria-expanded="false"
+                                                        aria-controls="multiCollapseExample<%= cont %>">Detalles
+                                                        Cuenta</a>
+                                                </p>
+                                                <div class="row">
+                                                    <div class="col">
+                                                        <div class="collapse multi-collapse"
+                                                            id="multiCollapseExample<%= cont %>">
+                                                            <div class="card card-body">
+                                                                <p> Numero Tarjeta:
+                                                                    <%= book.cuentabanco.numerotarjeta %>
+                                                                </p>
 
-        </div>
-    </div>
+                                                                <p> Fecha Vencimiento:
+                                                                    <%= book.cuentabanco.fechavencimiento %>
+                                                                </p>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+                                                                <p> Saldo disponible:
+                                                                    <%= book.cuentabanco.lineacredito.saldodisponible %>
+                                                                </p>
+
+                                                                <p>Saldo por pagar:
+                                                                    <%= book.cuentabanco.lineacredito.saldoporpagar %>
+                                                                </p>
+
+                                                                <p> Tipo de tarjeta:
+                                                                    <%= book.cuentabanco.tipotarjeta %>
+                                                                </p>
+
+                                                                <p> Tipo de producto:
+                                                                    <%= book.cuentabanco.tipoproducto %>
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <% cont++ %>
+                                        <% }); %>
+                        </div>
+                    </div>
+
+                    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+                        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+                        crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+                        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+                        crossorigin="anonymous"></script>
 </body>
 
 </html>
