--- a/src/views/new-entry.ejs
+++ b/src/views/new-entry.ejs
@@ -22,7 +22,7 @@
 
             <div class="form-group">
                 <label for="">Direccion</label>
-                <input type="text" class="form-control" name="direccion" id="direccion" placeholder=" Ingresa datos"" required>
+                <input type="text" class="form-control" name="direccion" id="direccion" placeholder=" Ingresa datos" required>
             </div>
 
             <div class="form-group">
