--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,34 +2,40 @@
 <html lang="en">
 
 <head>
+
+
     <%- include('partials/header') %>
+    <!-- Metodo para sacar mi id de mi form -->
         <script>
-            function obtenerId() {
-                '<% var id %>'
-                var id = document.getElementById('id').value;
-                alert(id)
-                '<% var id %>' = id;
-                //alert('<%id%>')
+            function obtenerId() {            
+              let id = form1.id.value;
+              form1.submit();
+              return id;
             }
         </script>
 </head>
 
 <body>
 
-    <form class="form-inline" style="margin-left: 23%; margin-top: 20px;">
+    <form name = 'form1' class="form-inline" style="margin-left: 23%; margin-top: 20px;">
+
         <div class="form-group mb-2">
             <label for="staticEmail2" class="sr-only">Email</label>
             <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Ingrese id: ">
         </div>
         <div class="form-group mx-sm-3 mb-2">
             <label for="inputPassword2" class="sr-only">Id</label>
-            <input type="text" class="form-control" id="id" placeholder="Id">
+            <input type="text" class="form-control" name="id" placeholder="Id" >
         </div>
         <button type="button" class="btn btn-primary mb-2" onclick="obtenerId()">Buscar</button>
     </form>
 
+            <!-- En este siguiente bloque de codigo me muestra los datos con el id pero lo pongo manualmente.
+             Cuando lo declaro como esta comentado en la siguiente linea me marca id is not defined. -->
+    <!--   <% if(book.id== id){ %> -->  
     <% books.forEach(function(book){ %>
-        <% if(book.id==id){ %>
+        <% if(book.id== 20){ %>
+            
             <div class="container p-4">
                 <p style="margin: 10px;">
                     Resultados de la busqueda:
